# Strand

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  Readme.md  converter.py
Docs/: RoadMap.md  (+1 more)
Examples/01-Import/: CMakeLists.txt  main.cpp
Examples/01-Import/Application/: Application.cpp  Application.h
Examples/01-Import/Mesh/: Mesh.cpp  Mesh.h
Examples/01-Import/RTV/: PresentTarget.h
Flaxbox/: CMakeLists.txt  MeshObject.cpp  MeshObject.h  OrbitCamera.cpp  OrbitCamera.h  TestObj.frag  main.cpp
Flaxbox/Application/: Application.cpp  Application.h
Sandbox/: CMakeLists.txt  MeshObject.cpp  MeshObject.h  OrbitCamera.cpp  OrbitCamera.h  TestObj.frag  TestObj.vert  main.cpp
Source/Editor/: CMakeLists.txt  main.cpp
Source/Editor/Core/: CoreMinimal.h  PCH.h
Source/Editor/Data/ActionRegistry/: MenuActionRegistry.h
Source/Editor/Data/Button/: PushButton.cpp  PushButton.h
Source/Editor/Data/Controller/: ControllerBase.h  ControllerManager.h
Source/Editor/Data/CustomPBV/: CustomPBV.cpp  CustomPBV.h
Source/Editor/Data/LogSink/: LogReceiver.cpp  LogReceiver.h  QLogSink.h
Source/Editor/Data/Registry/: ViewModelBase.h  ViewModelRegistry.h
Source/Editor/Data/Service/: UIService.h  UIServiceBase.h
Source/Editor/Data/Vector/: NumberValueType.h  ValueWidget.cpp  ValueWidget.h  Vector1Widget.cpp  Vector1Widget.h  Vector2Widget.cpp  Vector2Widget.h  Vector3Widget.cpp  Vector3Widget.h  Vector4Widget.cpp  Vector4Widget.h
Source/Editor/DomainView/: DomainListView.cpp  DomainListView.h  DomainMiscView.cpp  DomainMiscView.h  DomainPathView.cpp  DomainPathView.h  DomainTreeView.cpp  DomainTreeView.h  DomainViewController.cpp  DomainViewController.h  DomainViewWidget.cpp  DomainViewWidget.h
Source/Editor/DomainView/IconProvider/: DomainIconProvider.cpp  DomainIconProvider.h
Source/Editor/DomainView/ItemDelegate/: NoExtensionDelegate.cpp  NoExtensionDelegate.h
Source/Editor/DomainView/Proxy/: DomainFilterProxy.cpp  DomainFilterProxy.h
Source/Editor/EditorMenuView/: FileMenu.cpp  FileMenu.h
Source/Editor/EditorWindow/: EditorWindow.cpp  EditorWindow.h
Source/Editor/EditorWindow/View/: EditorWindow.cpp  EditorWindow.h
Source/Editor/EditorWindow/ViewModel/: EditorDirection.h  EditorWindowViewModel.cpp  EditorWindowViewModel.h
Source/Editor/GUIApplication/: GUIApplication.cpp  GUIApplication.h
Source/Editor/HierarchyWidget/: HierarchyService.cpp  HierarchyService.h  HierarchyWidget.cpp  HierarchyWidget.h
Source/Editor/ImportWidget/: ModelImportView.cpp  ModelImportView.h  TextureImportView.cpp  TextureImportView.h
Source/Editor/InspectorWidget/: InspectorWidget.cpp  InspectorWidget.h  TransformWidget.cpp  TransformWidget.h
Source/Editor/InspectorWidget/DragFloatInput/: DragFloatInput.cpp  DragFloatInput.h  style.txt
Source/Editor/InspectorWidget/VectorWidget/: Vector3Widget.cpp  Vector3Widget.h
Source/Editor/Models/Content/: ContentItemModel.cpp  ContentItemModel.h  ContentModelRole.h
Source/Editor/ProjectContentWidget/: ProjectContentService.cpp  ProjectContentService.h  ProjectContentWidget.cpp  ProjectContentWidget.h
Source/Editor/PropertyInspector/: ComponentTabWidget.cpp  ComponentTabWidget.h  PropertyInspectorListView.cpp  PropertyInspectorListView.h  PropertyInspectorWidget.cpp  PropertyInspectorWidget.h  ReflectedComponentWidget.cpp  ReflectedComponentWidget.h
Source/Editor/SceneGraph/: SceneGraphController.cpp  SceneGraphController.h  SceneGraphModel.cpp  SceneGraphModel.h  SceneGraphRole.h  SceneGraphTreeView.cpp  SceneGraphTreeView.h  SceneGraphWidget.cpp  SceneGraphWidget.h
Source/Editor/SceneRenderer/: SceneRendererView.cpp  SceneRendererView.h  SceneRendererWidget.cpp  SceneRendererWidget.h  SceneToolView.cpp  SceneToolView.h
Source/Editor/SceneWidget/: SceneControlWidget.cpp  SceneControlWidget.h  SceneWidget.cpp  SceneWidget.h
Source/Editor/Style/: StyleManager.cpp  StyleManager.h
Source/Editor/TerminalWidget/: TerminalWidget.cpp  TerminalWidget.h
Source/Editor/Window/: EditorWindow.cpp  EditorWindow.h
Source/Runtime/: CMakeLists.txt  TestClass.h
Source/Runtime/Application/: ApplicationType.h
Source/Runtime/Core/: CoreMinimal.h
Source/Runtime/EntityComponent/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Source/Runtime/FileSystem/: FileMode.h  FileSystem.cpp  FileSystem.h  IFileStream.h  IVirtualFileNode.h  IVirtualFileSystem.h  VirtualNodeDesc.h  VirtualNodeType.h
Source/Runtime/Input/: InputDispatcher.cpp  InputDispatcher.h  InputEvent.h  InputQueue.h  MouseButton.h
Source/Runtime/Logger/: Logger.cpp  Logger.h
Source/Runtime/Platform/: PlatformPath.cpp  PlatformPath.h
Source/Runtime/Reflection/: ClassInfo.h  FieldInfo.h  IReflectable.h  JsonSerializer.cpp  JsonSerializer.h  JsonTypeUtils.cpp  JsonTypeUtils.h  MethodInfo.h  Reflection.h  ReflectionInfo.h  ReflectionManifest.cpp  ReflectionManifest.h  ReflectionRegistry.cpp  ReflectionRegistry.h  TypeAccessor.h  TypeInfo.h
Source/Runtime/Renderer/: Context.cpp  Context.h  Renderer.cpp  Renderer.h
Source/Runtime/Resource/: IResource.h  MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  TextureResource.cpp  TextureResource.h
Source/Runtime/Resources/: ResourceBase.cpp  ResourceBase.h  ResourceDesc.h  TestResource.cpp  TestResource.h
Source/Runtime/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Source/Runtime/SceneGraph/: Entity.cpp  Entity.h  IComponent.h  Scene.cpp  Scene.h  SceneController.h
Source/Runtime/Serialization/: JsonSerializer.cpp  JsonSerializer.h  SerializerHelpers.h
Source/Runtime/Service/: Service.h  ServiceLocator.h
Source/Runtime/Services/: ResourceService.cpp  ResourceService.h  SceneService.cpp  SceneService.h
Source/Runtime/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
Source/Runtime/Thread/: JobQueue.h  ThreadPool.cpp  ThreadPool.h
Source/Runtime/VirtualFile/: VFSNode.cpp  VFSNode.h  VFSNodeDesc.h  VFSType.h  VirtualFileSystem.cpp  VirtualFileSystem.h
Source/Runtime/Window/: BasicWindow.cpp  BasicWindow.h  WindowContext.h  WindowPollEvent.h
(+467 files in other folders)
